--- a/public/css/threed.css
+++ b/public/css/threed.css
@@ -545,3 +545,14 @@ a:focus-visible {
 .transform-icon:hover {
 	background-color: #d0d0d0;
 }
+
+.cart-count {
+	background: #f00;
+	color: white;
+	border-radius: 50%;
+	padding: 2px 6px;
+	font-size: 12px;
+	position: relative;
+	top: -10px;
+	right: -5px;
+}
